errorlogs/1516448050043-chromepass.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
144 INFO: PyInstaller: 3.3.1
145 INFO: Python: 3.4.4
145 INFO: Platform: Windows-XP-5.1.2600-SP3
146 INFO: wrote Z:\p2e\chromepass.spec
152 INFO: UPX is not available.
153 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
156 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516448050043', 'Z:\\p2e']
156 INFO: checking Analysis
156 INFO: Building Analysis because out00-Analysis.toc is non existent
157 INFO: Initializing module dependency graph...
165 INFO: Initializing module graph hooks...
169 INFO: Analyzing base_library.zip ...
7093 INFO: Processing pre-find module path hook   distutils
10595 INFO: running Analysis out00-Analysis.toc
11101 INFO: Caching module hooks...
11123 INFO: Analyzing Z:\p2e\workingdir\1516448050043\chromepass.py

Syntax error in Z:\p2e\workingdir\1516448050043\chromepass.py
  File "Z:\p2e\workingdir\1516448050043\chromepass.py", line 141
     args_parser()
               ^
 IndentationError: expected an indented block

